--- a/index.html
+++ b/index.html
@@ -284,23 +284,23 @@
                             </div>
                           </div>
                           <div class="s-card-img-div">
-                              <img src="img/logo/card1.png" alt="" class="s-image">
+                              <img src="img/icon/fotor-ai-2024022619150-removebg-preview.png" alt="" class="s-image">
                           </div>
                         </div>
                         <div class="bottom-section">
-                          <span class="title">AdiMita xEvoBoard</span>
+                          <a href="https://souravsohal.github.io/project-vidtream/;" target="_blank;"><span class="title" style="cursor:pointer">Vidstream Landing Page</span></a>
                           <div class="row row1">
                             <div class="item">
                               <span class="big-text">NaN</span>
-                              <span class="regular-text">Software</span>
+                              <span class="regular-text">Landing Page</span>
                             </div>
                             <div class="item">
                               <span class="big-text">NaN</span>
-                              <span class="regular-text">Management</span>
+                              <span class="regular-text">Front End</span>
                             </div>
                             <div class="item">
                               <span class="big-text">NaN</span>
-                              <span class="regular-text">Users</span>
+                              <span class="regular-text">Streaming</span>
                             </div>
                           </div>
                         </div>
