--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                           </div>
                         </div>
                         <div class="bottom-section">
-                          <a href="https://souravsohal.github.io/project-vidtream/;" target="_blank;"><span class="title" style="cursor:pointer">Vidstream Landing Page</span></a>
+                          <a href="https://souravsohal.github.io/project-vidtream/" target="_blank;"><span class="title" style="cursor:pointer">Vidstream Landing Page</span></a>
                           <div class="row row1">
                             <div class="item">
                               <span class="big-text">NaN</span>
