--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                 <span>Software and Web Development</span>
                                 <h2>Sourav</h2>
                                 <div>
-                                    <button class="btn" style="margin-bottom: 83px;">Resume</button>
+                                    <a href="fonts/resume.pdf" target="_blank"><button class="btn" style="margin-bottom: 83px;">Resume</button></a>
                                 </div>
                                 <a href="#" class="primary-btn">See more about me</a>
                             </div>
@@ -87,7 +87,7 @@
                                 <span>Software and Web Development</span>
                                 <h2>Sourav</h2>
                                 <div>
-                                    <button class="btn" style="margin-bottom: 83px;">Resume</button>
+                                    <a href="fonts/resume.pdf" target="_blank"><button class="btn" style="margin-bottom: 83px;">Resume</button></a>
                                 </div>
                                 <a href="#" class="primary-btn">See more about me</a>
                             </div>
@@ -103,7 +103,7 @@
                                 <span>Software and Web Development</span>
                                 <h2>Sourav</h2>
                                 <div>
-                                    <button class="btn" style="margin-bottom: 83px;">Resume</button>
+                                    <a href="fonts/resume.pdf" target="_blank"><button class="btn" style="margin-bottom: 83px;">Resume</button></a>
                                 </div>
                                 <a href="#" class="primary-btn">See more about me</a>
                             </div>
